202206250030: Fixed NaN heartrate value that nuked a session
202206251621: Moved invalid json check to the write function at the end for exercise
202206272255: Working on splitting this flow into subflows
202206272327: Removed exercise and sleep fibres to their own flows
202206280027: Removed sleep fibre from flow
202207030032: Added fiber for measurement taking.
202207102338: Completed restingHR measure.
202207182241: Added module to check heart rate every five minutes.
202207212156: Changed resting heart rate to get last reading instead of initiating a new reading. Added filter for the heart reading, so that values are always valid. Disabled timeout option that was causing the plugin to hang.
202207230021: First check that watch is on the wrist before doing anything.
202207231000: Added 30 second timer for heart reading. If time elapses, the flow ends.
202207261524: Added BT connect block.
202207262309: Removed BT disable, which cause issues with other flows immediately following.
202208092332: Added average medical reading.
202208100055: Finish draft of Get Health Reading flow.
202208120947: Removed date and time from hr reading. Added validation for resting heartrate.
202208120950: Added hrCoverage data point.
202208122254: Add heartrate to master file when over 75% hrCoverage.
202210291924: Added a readme file and created a configPath and writePath variable for initialisation.
202210291936: Fixing some initialisation flow bugs.
202211012326: Deleted daily health update.
202211030043: Added new heart rate max and min, remove series at the end of the day.
202211032137: Created metrics folder.
202211062058: Added average set for readings.
202211062141: Added a few combine function.
202211071850: Added new combine sessions fibre.
202303262304: Fixed empty config bug
202303280013: General fixes
202303282306: Minor fix to heart rate read
202303312303: Add connection command for BT watch actions