@@ -1,1 +1,10 @@
-{"name":"exercise","blurb":"Flow to keep track of exercise and fitness data.","version":"202304021002","configPath":"/storage/emulated/0/Automate/exercise/","writePath":"/storage/emulated/0/Documents/Quantified Self/Health/exercise/","comment":".","uri":"content://com.llamalab.automate.provider/flows/12/data"}
+{
+        "name": "exercise",
+        "blurb": "Flow to keep track of exercise and fitness data.",
+        "version": "202304021002",
+        "configPath": "/storage/emulated/0/Automate/exercise/",
+        "writePath": "/storage/emulated/0/Documents/Quantified Self/Health/exercise/",
+        "readingTimeout": 30,
+        "comment": ".",
+        "uri": "content://com.llamalab.automate.provider/flows/12/data"
+}
