@@ -33,3 +33,4 @@
 202303280013: General fixes
 202303282306: Minor fix to heart rate read
 202303312303: Add connection command for BT watch actions
+202304091505: Refactored heart rate monitor
